[package]
name = "rust_me"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.105"
tungstenite = "0.20.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
url = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.3.23", features = ["derive", "cargo"] }
image = "0.24.7"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
